<resources>
    <string name="app_name">Spacego</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="space_name">Space Name</string>
    <string name="description">Description</string>
    <string name="space_name_hint">Just enter the space name</string>
    <string name="space_desc_hint">A short description about your space</string>
    <string name="space_address_hint">1234 Street, Cairo, Eldokki</string>
    <string name="space_phone_hint">0112 911 7947 "no spaces only numbers"</string>
    <string name="space_state_hint">ex: Cairo</string>
    <string name="space_website_hint">www.example.com</string>
    <string name="space_map_lat_hint">30.0680582</string>
    <string name="space_wmap_lng_hint">31.0194825</string>

    <string name="address_title">Address</string>
    <string name="website_title">Website</string>
    <string name="feature_title">Features</string>
    <string name="map_title">Map</string>
    <string name="add_space">ADD SPACE</string>

    <string name="state_spinner">Choose a state</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="sign_up_account">Sign up</string>
    <string name="log_in_statment">LOG IN</string>
    <string name="login_account">LOGIN</string>
    <string name="about_space">Overview</string>
    <string name="lorem">lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem lorem</string>
    <string name="comments_space">Comments</string>
    <string name="username_lorem">Username</string>
    <string name="free_coffee">Free Coffee</string>
    <string name="fast_wifi">Fast WiFi</string>
    <string name="_24_hour">24 Hour</string>
    <string name="printer_access">Printer Access</string>
    <string name="free_parking">Free Parking</string>
    <string name="kitchenette">Kitchenette</string>
    <string name="membership">Membership</string>
    <string name="green_space">Green Space</string>
    <string name="conference">Conference</string>
    <string name="private_offices">Private Offices</string>
    <string name="public_transpor">Public Transpor.</string>
    <string name="maker_space">Maker Space</string>

    <string-array name="states_arrays">
        <item>Alexandria</item>
        <item>Aswan</item>
        <item>Asyut	</item>
        <item>Beheira</item>
        <item>Beni Suef	</item>
        <item>Cairo	</item>
        <item>Dakahlia</item>
        <item>Damietta</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Giza</item>
        <item>Ismailia</item>
        <item>Kafr El Sheikh</item>
        <item>Luxor</item>
        <item>Matruh</item>
        <item>Minya</item>
        <item>Monufia</item>
        <item>New Valley</item>
        <item>North Sinai</item>
        <item>Port Said	</item>
        <item>Qalyubia	</item>
        <item>Qena	</item>
        <item>Red Sea</item>
        <item>Sharqia</item>
        <item>Sohag	</item>
        <item>South Sinai</item>
        <item>Suez</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="space_phone">phone</string>
    <string name="write_your_review">Write your review</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">an hour</string>
    <string name="time_ago_hours">%d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="how_you_rate">How would you rate this space?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="AddToWidget">Add to widget</string>
    <string name="addToWidgetToast_messege">Add successfully to widget!</string>
    <string name="navNearby_spaces">Nearby Spaces</string>
    <string name="navAccountGroupTitle">Account</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_sign_in">Sign in</string>
    <string name="Activity_nearbySpaces_toolbar">Nearby Spaces</string>
    <string name="NoSpacesAround">No Spaces around.!</string>
    <string name="use_my_location">Use My Location</string>
    <string name="LeaveComment">LEAVE A COMMENT</string>
    <string name="TellAboutThisSpace">Tell us about this space...</string>
    <string name="submit">Submit</string>
    <string name="WidgetSpacesTitle">Nearby spaces</string>
    <string name="SpaceCover_contentDescription">an Image that shows the space\'s atmosphere</string>
    <string name="logo_image_ContentDesc">App logo image</string>
    <string name="whoopsImage_ContentDesc">An image that show up when connection is lost</string>
    <string name="noSpacesImage_ContentDesc">An image that show up when no spaces around</string>
    <string name="locationIcon_ContentDesc">Location icon</string>
    <string name="phoneIcon_ContentDesc">Phone Icon</string>
    <string name="state_icon_ContentDesc">State Icon</string>
    <string name="websiteIcon_ContentDesc">website icon</string>
    <string name="mapIcon_ContentDesc">map icon</string>
    <string name="applogo_image_ContentDesc">App Logo Image</string>
    <string name="spacegoLogo_ContentDesc">SpaceGo app logo</string>
    <string name="information_icon_ContentDesc">information icon</string>
    <string name="AddressIcon_ContentDesc">address icon</string>
    <string name="commentIcon_ContentDesc">comment icon</string>
    <string name="feature_24hour_ContentDesc">The space open 24 hour</string>
    <string name="feature_coffee_ContentDesc">The space offers free coffee</string>
    <string name="feature_wifi_ContentDesc">The space hava fast wifi</string>
    <string name="feature_conference_ContentDesc">The space offer a conference hosting</string>
    <string name="feature_green_ContentDesc">The space contains green space area</string>
    <string name="feature_Kitchen_ContentDesc">The space contains a kitchen</string>
    <string name="feature_membership_ContentDesc">The space offere memberships</string>
    <string name="feature_printer_ContentDesc">The space offer a free access to printer</string>
    <string name="feature_parking_ContentDesc">The space have free parking area</string>
    <string name="feature_offices_ContentDesc">The space offer private offices for the members</string>
    <string name="feature_public_ContentDesc">You can reach to the space by public transportation</string>
    <string name="background_ContentDesc">Background</string>
    <string name="fab_addSpace_contentDesc">Add new space</string>
    <string name="fab_coverImage_ContentDesc">Upload a cover image for the space</string>
    <string name="loginAlertMessege">Please Login first to add your review!</string>
    <string name="check_ur_connection">Check your Connection!</string>
    <string name="tryAgain">Try again!</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_Password">Enter password!</string>
    <string name="pleaseWait">Please wait!</string>
    <string name="check_ur_information">Check your informaiton!</string>
    <string name="added_successfully">added successfully</string>
    <string name="FailedAddSpace">Failed to add space! try later!</string>
    <string name="pickAphoto">Please, Pick a photo!</string>
    <string name="passTooShort">Password too short!</string>
    <string name="done">Done!</string>
    <string name="youAwesoneThanks">You are awesome! Thanks</string>
    <string name="failed">Failed! try again</string>
    <string name="tellusyourReview">Please! Tell us your review!</string>

</resources>
